--- a/css/agency.css
+++ b/css/agency.css
@@ -890,3 +890,13 @@ body {
     box-shadow: -2px -2px 5px #000;
     color: #000;
 }
+.card .banner{
+    height: 50px;
+    padding: 8px;
+    background: rgba(255,255,255,.3);
+    color: #FFF;
+    font-size: 20px;
+    line-height: 32px;
+    position: relative;
+    margin-top: -50px;
+}
